fix: footer is now outside of section div fixing centering on smaller screens

--- a/src/output.css
+++ b/src/output.css
@@ -578,6 +578,14 @@ video {
   margin-left: 1.25rem;
 }
 
+.mt-40 {
+  margin-top: 10rem;
+}
+
+.box-content {
+  box-sizing: content-box;
+}
+
 .inline {
   display: inline;
 }
@@ -604,6 +612,51 @@ video {
   height: 100%;
 }
 
+.size-10 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.size-5 {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
+.size-11 {
+  width: 2.75rem;
+  height: 2.75rem;
+}
+
+.size-\[45px\] {
+  width: 45px;
+  height: 45px;
+}
+
+.size-\[42px\] {
+  width: 42px;
+  height: 42px;
+}
+
+.size-\[40px\] {
+  width: 40px;
+  height: 40px;
+}
+
+.size-\[43px\] {
+  width: 43px;
+  height: 43px;
+}
+
+.size-\[42\.5px\] {
+  width: 42.5px;
+  height: 42.5px;
+}
+
+.size-\[4px\] {
+  width: 4px;
+  height: 4px;
+}
+
 .h-11 {
   height: 2.75rem;
 }
@@ -626,6 +679,10 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.min-h-screen {
+  min-height: 100vh;
 }
 
 .w-3\/5 {
@@ -668,6 +725,10 @@ video {
   place-content: center;
 }
 
+.place-items-center {
+  place-items: center;
+}
+
 .items-end {
   align-items: flex-end;
 }
@@ -680,8 +741,16 @@ video {
   justify-content: flex-start;
 }
 
+.justify-end {
+  justify-content: flex-end;
+}
+
 .justify-center {
   justify-content: center;
+}
+
+.justify-between {
+  justify-content: space-between;
 }
 
 .space-x-5 > :not([hidden]) ~ :not([hidden]) {
@@ -724,6 +793,14 @@ video {
 
 .border-r-2 {
   border-right-width: 2px;
+}
+
+.border-t-2 {
+  border-top-width: 2px;
+}
+
+.border-transparent {
+  border-color: transparent;
 }
 
 .bg-black {
@@ -776,6 +853,22 @@ video {
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
+}
+
+.pt-0\.5 {
+  padding-top: 0.125rem;
+}
+
+.pt-96 {
+  padding-top: 24rem;
+}
+
+.pt-40 {
+  padding-top: 10rem;
 }
 
 .text-center {
@@ -838,6 +931,15 @@ video {
   color: rgb(20 83 45 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.opacity-50 {
+  opacity: 0.5;
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -895,6 +997,27 @@ h1 {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.hover\:border-x-2:hover {
+  border-left-width: 2px;
+  border-right-width: 2px;
+}
+
+.hover\:border-t:hover {
+  border-top-width: 1px;
+}
+
+.hover\:border-t-2:hover {
+  border-top-width: 2px;
+}
+
+.hover\:border-l-2:hover {
+  border-left-width: 2px;
+}
+
+.hover\:border-current:hover {
+  border-color: currentColor;
 }
 
 .hover\:bg-gray-800:hover {
